# tauri-plugin-biometry

./: .markdownlintignore  Cargo.toml  README.md  build.rs  cspell.json  deny.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-demo.yml  checks.yml  publish.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BiometryActivity.kt  BiometryPlugin.kt
android/src/main/res/xml/: backup_descriptor.xml  backup_rules.xml
android/src/test/java/: ExampleUnitTest.kt
examples/biometry-demo/: package.json  pnpm-lock.yaml
examples/biometry-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/biometry-demo/src-tauri/capabilities/: default.json
examples/biometry-demo/src-tauri/src/: lib.rs  main.rs
examples/biometry-demo/src/routes/: +page.svelte
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: BiometryPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  macos.rs  mobile.rs  models.rs  scope.rs  windows.rs
