[package]
name = "tauri-plugin-biometry"
version = "0.1.1"
authors = [ "You" ]
description = "A Tauri v2 plugin for biometric authentication (Touch ID, Face ID, fingerprint) on iOS and Android"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-biometry"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-biometry"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
